// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepositoriesPanel Both r: and repo: filters are tracked 1`] = `
<DocumentFragment>
  <div
    class="repositories-panel panelContainer d-flex flex-column"
  >
    <div
      class="d-flex border-bottom header"
    >
      <h2
        class="h2 h4 headerText"
      >
        Repositories
      </h2>
    </div>
    <div
      class="h-100 content"
    >
      <table
        class="mt-2 resultsTable"
      >
        <thead>
          <tr
            class="resultsTableRow"
          >
            <th>
              <small>
                Search
              </small>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="text-monospace text-break resultsTableRow"
          >
            <td>
              <small>
                <a
                  class="anchorLink"
                  href="/search?q=repo:sourcegraph"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    <span
                      class="search-filter-keyword"
                    >
                      repo
                    </span>
                    <span
                      class="search-filter-separator"
                    >
                      :
                    </span>
                    <span
                      class="search-query-text"
                    >
                      sourcegraph
                    </span>
                  </span>
                </a>
              </small>
            </td>
          </tr>
          <tr
            class="text-monospace text-break resultsTableRow"
          >
            <td>
              <small>
                <a
                  class="anchorLink"
                  href="/search?q=repo:test"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    <span
                      class="search-filter-keyword"
                    >
                      repo
                    </span>
                    <span
                      class="search-filter-separator"
                    >
                      :
                    </span>
                    <span
                      class="search-query-text"
                    >
                      test
                    </span>
                  </span>
                </a>
              </small>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RepositoriesPanel Show More button is shown if more pages are available 1`] = `
<DocumentFragment>
  <div
    class="repositories-panel panelContainer d-flex flex-column"
  >
    <div
      class="d-flex border-bottom header"
    >
      <h2
        class="h2 h4 headerText"
      >
        Repositories
      </h2>
    </div>
    <div
      class="h-100 content"
    >
      <table
        class="mt-2 resultsTable"
      >
        <thead>
          <tr
            class="resultsTableRow"
          >
            <th>
              <small>
                Search
              </small>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="text-monospace text-break resultsTableRow"
          >
            <td>
              <small>
                <a
                  class="anchorLink"
                  href="/search?q=repo:test"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    <span
                      class="search-filter-keyword"
                    >
                      repo
                    </span>
                    <span
                      class="search-filter-separator"
                    >
                      :
                    </span>
                    <span
                      class="search-query-text"
                    >
                      test
                    </span>
                  </span>
                </a>
              </small>
            </td>
          </tr>
          <tr
            class="text-monospace text-break resultsTableRow"
          >
            <td>
              <small>
                <a
                  class="anchorLink"
                  href="/search?q=repo:sourcegraph"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    <span
                      class="search-filter-keyword"
                    >
                      repo
                    </span>
                    <span
                      class="search-filter-separator"
                    >
                      :
                    </span>
                    <span
                      class="search-query-text"
                    >
                      sourcegraph
                    </span>
                  </span>
                </a>
              </small>
            </td>
          </tr>
          <tr
            class="text-monospace text-break resultsTableRow"
          >
            <td>
              <small>
                <a
                  class="anchorLink"
                  href="/search?q=repo:test-two"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    <span
                      class="search-filter-keyword"
                    >
                      repo
                    </span>
                    <span
                      class="search-filter-separator"
                    >
                      :
                    </span>
                    <span
                      class="search-query-text"
                    >
                      test-two
                    </span>
                  </span>
                </a>
              </small>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="text-center py-3"
      >
        <button
          class="btn btnLink test-repositories-panel-show-more"
          type="button"
        >
          Show more
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RepositoriesPanel Show More button loads more items 1`] = `
<DocumentFragment>
  <div
    class="repositories-panel panelContainer d-flex flex-column"
  >
    <div
      class="d-flex border-bottom header"
    >
      <h2
        class="h2 h4 headerText"
      >
        Repositories
      </h2>
    </div>
    <div
      class="h-100 content"
    >
      <table
        class="mt-2 resultsTable"
      >
        <thead>
          <tr
            class="resultsTableRow"
          >
            <th>
              <small>
                Search
              </small>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="text-monospace text-break resultsTableRow"
          >
            <td>
              <small>
                <a
                  class="anchorLink"
                  href="/search?q=repo:test"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    <span
                      class="search-filter-keyword"
                    >
                      repo
                    </span>
                    <span
                      class="search-filter-separator"
                    >
                      :
                    </span>
                    <span
                      class="search-query-text"
                    >
                      test
                    </span>
                  </span>
                </a>
              </small>
            </td>
          </tr>
          <tr
            class="text-monospace text-break resultsTableRow"
          >
            <td>
              <small>
                <a
                  class="anchorLink"
                  href="/search?q=repo:sourcegraph"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    <span
                      class="search-filter-keyword"
                    >
                      repo
                    </span>
                    <span
                      class="search-filter-separator"
                    >
                      :
                    </span>
                    <span
                      class="search-query-text"
                    >
                      sourcegraph
                    </span>
                  </span>
                </a>
              </small>
            </td>
          </tr>
          <tr
            class="text-monospace text-break resultsTableRow"
          >
            <td>
              <small>
                <a
                  class="anchorLink"
                  href="/search?q=repo:test-two"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    <span
                      class="search-filter-keyword"
                    >
                      repo
                    </span>
                    <span
                      class="search-filter-separator"
                    >
                      :
                    </span>
                    <span
                      class="search-query-text"
                    >
                      test-two
                    </span>
                  </span>
                </a>
              </small>
            </td>
          </tr>
        </tbody>
      </table>
      <span
        aria-live="polite"
        style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      >
        Loading more repositories
      </span>
      <div
        class="text-center py-3"
      >
        <button
          class="btn btnLink test-repositories-panel-show-more"
          type="button"
        >
          Show more
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RepositoriesPanel consecutive searches with identical repo filters are correctly merged when rendered 1`] = `
<DocumentFragment>
  <div
    class="repositories-panel panelContainer d-flex flex-column"
  >
    <div
      class="d-flex border-bottom header"
    >
      <h2
        class="h2 h4 headerText"
      >
        Repositories
      </h2>
    </div>
    <div
      class="h-100 content"
    >
      <table
        class="mt-2 resultsTable"
      >
        <thead>
          <tr
            class="resultsTableRow"
          >
            <th>
              <small>
                Search
              </small>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="text-monospace text-break resultsTableRow"
          >
            <td>
              <small>
                <a
                  class="anchorLink"
                  href="/search?q=repo:test"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    <span
                      class="search-filter-keyword"
                    >
                      repo
                    </span>
                    <span
                      class="search-filter-separator"
                    >
                      :
                    </span>
                    <span
                      class="search-query-text"
                    >
                      test
                    </span>
                  </span>
                </a>
              </small>
            </td>
          </tr>
          <tr
            class="text-monospace text-break resultsTableRow"
          >
            <td>
              <small>
                <a
                  class="anchorLink"
                  href="/search?q=repo:sourcegraph"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    <span
                      class="search-filter-keyword"
                    >
                      repo
                    </span>
                    <span
                      class="search-filter-separator"
                    >
                      :
                    </span>
                    <span
                      class="search-query-text"
                    >
                      sourcegraph
                    </span>
                  </span>
                </a>
              </small>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
